[gd_scene load_steps=19 format=3 uid="uid://bvgxlsv6fcpoe"]

[ext_resource type="Script" path="res://Scenes & Scripts/Prefabs/Structures/Production/building.gd" id="1_poico"]
[ext_resource type="PackedScene" uid="uid://bgvb87durx888" path="res://Scenes & Scripts/Asset Scenes/ol_kaserne_baked.tscn" id="2_6pk4w"]

[sub_resource type="BoxShape3D" id="BoxShape3D_spen3"]
size = Vector3(3, 1, 3)

[sub_resource type="BoxMesh" id="BoxMesh_c6d8r"]
size = Vector3(3, 1, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n0win"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_p8wuu"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bf4h5"]
albedo_color = Color(0.869146, 0.666209, 0.113049, 1)

[sub_resource type="Animation" id="Animation_u40vk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ywg0b"]
resource_name = "rotate"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5708, 0), Vector3(0, 3.14159, 0), Vector3(0, 4.71239, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nyg2k"]
_data = {
"RESET": SubResource("Animation_u40vk"),
"rotate": SubResource("Animation_ywg0b")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xny63"]
radius = 1.5

[sub_resource type="SphereShape3D" id="SphereShape3D_i5op1"]
radius = 4.31946

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nej64"]
bg_color = Color(1, 0.337255, 0.337255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pa52"]
bg_color = Color(0, 0.713726, 0.443137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yy1nf"]
bg_color = Color(0.6, 0.52549, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6w1ms"]

[sub_resource type="ViewportTexture" id="ViewportTexture_kfgwd"]
viewport_path = NodePath("HealthbarContainer")

[sub_resource type="ViewportTexture" id="ViewportTexture_0nlid"]
viewport_path = NodePath("ProductionProgress")

[node name="Building" type="StaticBody3D" groups=["Building", "CombatTarget", "FowObject", "MouseRaycast", "Structure"]]
script = ExtResource("1_poico")

[node name="BuildingColl" type="CollisionShape3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)
shape = SubResource("BoxShape3D_spen3")

[node name="OL_Kaserne_baked" parent="." instance=ExtResource("2_6pk4w")]
transform = Transform3D(-1.74846e-08, 0, -0.4, 0, 0.4, 0, 0.4, 0, -1.74846e-08, -10.0442, 0.5, 2.04533)
visible = false

[node name="BuildingBody" type="MeshInstance3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_c6d8r")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_n0win")

[node name="BuildingPause" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("BoxMesh_p8wuu")
surface_material_override/0 = SubResource("StandardMaterial3D_bf4h5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BuildingPause"]
libraries = {
"": SubResource("AnimationLibrary_nyg2k")
}
autoplay = "rotate"

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="SpawnPointNorth" type="Area3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnPoints/SpawnPointNorth"]
shape = SubResource("CylinderShape3D_xny63")

[node name="SpawnPointNortheast" type="Area3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.5, -2.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnPoints/SpawnPointNortheast"]
shape = SubResource("CylinderShape3D_xny63")

[node name="SpawnPointEast" type="Area3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnPoints/SpawnPointEast"]
shape = SubResource("CylinderShape3D_xny63")

[node name="SpawnPointSoutheast" type="Area3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.5, 2.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnPoints/SpawnPointSoutheast"]
shape = SubResource("CylinderShape3D_xny63")

[node name="SpawnPointSouth" type="Area3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnPoints/SpawnPointSouth"]
shape = SubResource("CylinderShape3D_xny63")

[node name="SpawnPointSouthwest" type="Area3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0.5, 2.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnPoints/SpawnPointSouthwest"]
shape = SubResource("CylinderShape3D_xny63")

[node name="SpawnPointWest" type="Area3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnPoints/SpawnPointWest"]
shape = SubResource("CylinderShape3D_xny63")

[node name="SpawnPointNorthwest" type="Area3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0.5, -2.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnPoints/SpawnPointNorthwest"]
shape = SubResource("CylinderShape3D_xny63")

[node name="RangeArea" type="Area3D" parent="."]

[node name="RangeColl" type="CollisionShape3D" parent="RangeArea"]
shape = SubResource("SphereShape3D_i5op1")

[node name="HealthbarContainer" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true

[node name="HealthBar" type="ProgressBar" parent="HealthbarContainer"]
offset_right = 354.0
offset_bottom = 27.0
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_nej64")
theme_override_styles/fill = SubResource("StyleBoxFlat_0pa52")
value = 100.0
show_percentage = false

[node name="ProductionProgress" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true

[node name="ProductionBar" type="ProgressBar" parent="ProductionProgress"]
offset_right = 354.0
offset_bottom = 27.0
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_yy1nf")
theme_override_styles/fill = SubResource("StyleBoxFlat_6w1ms")
value = 100.0
fill_mode = 1
show_percentage = false

[node name="HealthBarSprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.889443, 0.901891, 0)
visible = false
texture = SubResource("ViewportTexture_kfgwd")

[node name="ProgressSprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.32067, 0)
visible = false
texture = SubResource("ViewportTexture_0nlid")

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
